@@ -60,4 +60,20 @@
 	<oaf_attribute name="panel:category" type="string" value="Utility"/>
 
 </oaf_server>
+
+<oaf_server iid="OAFIID:GNOME_MailcheckApplet"
+	    type="factory" 
+	    location="OAFIID:GNOME_GenUtilApplet_Factory">
+
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:GNOME/PanelAppletShell:1.0"/>
+		<item value="IDL:Bonobo/Control:1.0"/>
+		<item value="IDL:Bonobo/Unknown:1.0"/>
+	</oaf_attribute>
+	<oaf_attribute name="name" type="string" value="MailcheckApplet"/>
+	<oaf_attribute name="description" type="string" value="Mailcheck Applet"/>
+	<oaf_attribute name="panel:icon" type="string" value="gnome-mailcheck.png"/>
+	<oaf_attribute name="panel:category" type="string" value="Network"/>
+
+</oaf_server>
 </oaf_info>
