@@ -1,3 +1,11 @@
+2002-01-02  Kevin Vandersloot <kfv101@psu.edu>
+
+	* mailcheck.c: initial port to new api.
+
+	* GNOME_GenUtil....server.in.in:
+	* main.c:
+	Add mailcheck applet to these
+
 2001-12-17  Mark McLoughlin  <mark@skynet.ie>
 
 	* clock.c: (fill_clock_applet):
